--- a/courses.html
+++ b/courses.html
@@ -17,22 +17,44 @@
             <a href="index.html" class="header__logo">
                <img src="img/NavBar/logo.png" alt="Логотип">
             </a>
-            <nav class="header__menu menu">
-               <ul class="menu__list">
-                  <li class="menu__item"><a href="about.html" class="menu__link">About Us</a></li>
-                  <li class="menu__item"><a href="courses.html" class="menu__link">Courses</a></li>
-                  <li class="menu__item"><a href="events.html" class="menu__link">Events</a></li>
-                  <li class="menu__item"><a href="blog.html" class="menu__link">Blog</a></li>
-                  <li class="menu__item"><a href="contacts.html" class="menu__link">Contacts</a></li>
-               </ul>
-            </nav>
+            <div class="header__menu menu">
+
+               <nav class="menu__body">
+                  <ul class="menu__list">
+                     <li class="menu__item">
+                        <a href="about.html" class="menu__link">
+                           About Us
+                        </a>
+                     </li>
+                     <li class="menu__item"><a href="courses.html" class="menu__link">Courses</a></li>
+                     <li class="menu__item"><a href="events.html" class="menu__link">Events</a></li>
+                     <li class="menu__item"><a href="blog.html" class="menu__link">Blog</a></li>
+                     <li class="menu__item"><a href="contacts.html" class="menu__link">Contacts</a></li>
+                  </ul>
+               </nav>
+            </div>
+
+            <a href="#" class="button test__button">
+               Get consultation
+            </a>
             <div class="header__buttons">
-               <a href="#" class="button">
-                  Get consultation
+               <a href="#in" class="log-link dialog-link">
+                  Log in
                </a>
-               <a href="#" class="register-link">
-                  Log in / Register
+               <a href="#up" class="register-link dialog-link">
+                  Register
                </a>
+            </div>
+            <div class="menu__burger">
+               <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                     d="M1 12C1 11.4477 1.44772 11 2 11H22C22.5523 11 23 11.4477 23 12C23 12.5523 22.5523 13 22 13H2C1.44772 13 1 12.5523 1 12Z" />
+                  <path
+                     d="M1 18C1 17.4477 1.44772 17 2 17H22C22.5523 17 23 17.4477 23 18C23 18.5523 22.5523 19 22 19H2C1.44772 19 1 18.5523 1 18Z" />
+                  <path
+                     d="M1 6C1 5.44772 1.44772 5 2 5H22C22.5523 5 23 5.44772 23 6C23 6.55228 22.5523 7 22 7H2C1.44772 7 1 6.55228 1 6Z" />
+               </svg>
+
             </div>
          </div>
       </header>
@@ -359,11 +381,10 @@
                      <img src="img/createx-certificate/createx-certificate_icons/National_Health_Logo.svg"
                         alt="логотип">
                   </div>
-                  <div class="createx-certificate__general-image createx-certificate__general-image-courses">
-                     <img src="img/createx-certificate/ceкtificate.png" alt="Сертификат">
-                  </div>
                </div>
-
+               <div class="createx-certificate__general-image createx-certificate__general-image-courses">
+                  <img src="img/createx-certificate/ceкtificate.png" alt="Сертификат">
+               </div>
             </div>
          </div>
          <div class="subscribe-form subscribe-form-courses">
@@ -373,7 +394,11 @@
                   <h2 class="subtitle-title__title">Subscribe to the Createx School announcements</h2>
                </div>
                <div class="subscribe-form__email-field">
-                  <input type="text" class="subscribe-form-email">
+                  <form class="subscribe-form-email">
+                     <input class="subscribe-form-email" autocomplete="off" type="email"
+                        placeholder="Your working email">
+                  </form>
+
                   <a href="#" class="subscribe-form__button button">
                      Subscribe
                   </a>
@@ -542,5 +567,6 @@
    </div>
    <script src="js/slider.js"></script>
 </body>
+<!-- Адаптирована -->
 
 </html>
