--- a/contacts.html
+++ b/contacts.html
@@ -362,6 +362,172 @@
          <div class="footer__bcgd-block">
          </div>
       </footer>
+      <!-- форма входа в аккаунт  -->
+      <div id="in" class="sign-in">
+         <div class="sign-in__body">
+            <div class="sign-in__content">
+               <a class="sign-in__close close-dialog" href="#"></a>
+               <div class="sign-in__title">Sign in</div>
+               <p class="sign-in__text">
+                  Sign in to your account using email and password provided during registration.
+               </p>
+               <form class="sign-in__register" action="#">
+
+                  <div class="sign-in__email">
+                     <label class="sign-in__label-email">Email</label>
+                     <input class="sign-in__input-email" placeholder="Your working email" type="email">
+                  </div>
+
+                  <div class="sign-in__pass">
+                     <label class="sign-in__label-pass">Password</label>
+                     <input class="sign-in__input-pass" type="password" placeholder="Your password" autocomplete="off">
+                     <img class="sign-in__eye-pass" src="img/sign_in/logo/eye.svg" alt="eye">
+                  </div>
+
+                  <div class="sign-in__keep-password">
+
+                     <div class="sign-in__checkbox">
+                        <input id="keep" name="keep" type="checkbox" class="sign-in__check">
+                        <label for="keep" class="sign-in__label-check">
+                           Keep me signed in
+                        </label>
+                     </div>
+
+                     <div class="sign-in__forgot">
+                        <a href="#" class="sign-in__recover-link">
+                           Forgot password?
+                        </a>
+                     </div>
+
+                  </div>
+
+                  <button class="sign-in__button button">
+                     Sign in
+                  </button>
+               </form>
+               <div class="sign-in__account">
+                  <span class="sign-in__have">Don't have an account?
+                     <a class="sign-in__link" href="#up">
+                        Sign up
+                     </a>
+                  </span>
+               </div>
+               <h3 class="sign-in__sotial-subtitle">
+                  Or sign in with
+               </h3>
+               <div class="sign-in__media-box">
+                  <svg class="sign-in__facebook--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M14.6359 0.837799L12.3215 0.833984C9.72134 0.833984 8.04102 2.60489 8.04102 5.34584V7.42611H5.71401C5.51293 7.42611 5.3501 7.59357 5.3501 7.80013V10.8142C5.3501 11.0208 5.51312 11.188 5.71401 11.188H8.04102V18.7935C8.04102 19 8.20386 19.1673 8.40494 19.1673H11.441C11.6421 19.1673 11.8049 18.9999 11.8049 18.7935V11.188H14.5258C14.7268 11.188 14.8897 11.0208 14.8897 10.8142L14.8908 7.80013C14.8908 7.70095 14.8524 7.60597 14.7842 7.53578C14.7161 7.46559 14.6232 7.42611 14.5267 7.42611H11.8049V5.66264C11.8049 4.81505 12.0016 4.38476 13.0764 4.38476L14.6355 4.38419C14.8364 4.38419 14.9992 4.21673 14.9992 4.01037V1.21163C14.9992 1.00545 14.8366 0.83818 14.6359 0.837799Z" />
+                  </svg>
+                  <svg class="sign-in__google--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M10.1761 8.7522H18.4056C18.4964 9.25921 18.5418 9.74352 18.5418 10.2051C18.5418 11.8472 18.1975 13.3134 17.5089 14.6037C16.8203 15.8939 15.8384 16.9023 14.5633 17.6287C13.2882 18.3552 11.8258 18.7184 10.1761 18.7184C8.98803 18.7184 7.85671 18.4895 6.78214 18.0317C5.70757 17.5739 4.78057 16.9552 4.00113 16.1758C3.22169 15.3963 2.60306 14.4693 2.14523 13.3948C1.68741 12.3202 1.4585 11.1889 1.4585 10.0008C1.4585 8.81273 1.68741 7.68141 2.14523 6.60685C2.60306 5.53228 3.22169 4.60528 4.00113 3.82584C4.78057 3.0464 5.70757 2.42777 6.78214 1.96994C7.85671 1.51212 8.98803 1.2832 10.1761 1.2832C12.4463 1.2832 14.3949 2.04372 16.0219 3.56476L13.6495 5.84633C12.7187 4.94581 11.5609 4.49555 10.1761 4.49555C9.19991 4.49555 8.2975 4.74149 7.46888 5.23337C6.64025 5.72525 5.98378 6.39307 5.49947 7.23683C5.01516 8.08059 4.773 9.00192 4.773 10.0008C4.773 10.9997 5.01516 11.921 5.49947 12.7648C5.98378 13.6086 6.64025 14.2764 7.46888 14.7683C8.2975 15.2601 9.19991 15.5061 10.1761 15.5061C10.8345 15.5061 11.4399 15.4153 11.9923 15.2336C12.5447 15.052 12.9987 14.825 13.3544 14.5526C13.7101 14.2802 14.0203 13.9699 14.2852 13.6218C14.55 13.2737 14.7449 12.9445 14.8698 12.6343C14.9946 12.324 15.0798 12.0289 15.1252 11.7489H10.1761V8.7522Z" />
+                  </svg>
+                  <svg class="sign-in__twitter--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M18.75 4.80963C18.1059 5.08291 17.4148 5.26824 16.6887 5.35098C17.4301 4.92586 17.9976 4.25154 18.2666 3.45051C17.5711 3.84421 16.8035 4.13008 15.9855 4.28505C15.3305 3.61597 14.3988 3.19922 13.3653 3.19922C11.3827 3.19922 9.77523 4.73844 9.77523 6.63576C9.77523 6.90485 9.80694 7.16767 9.86819 7.41899C6.88501 7.27552 4.23973 5.90699 2.46928 3.82745C2.1598 4.33426 1.98374 4.92479 1.98374 5.55516C1.98374 6.7478 2.618 7.80012 3.58033 8.41579C2.992 8.39695 2.43866 8.24198 1.95423 7.98439V8.02732C1.95423 9.69219 3.19213 11.0817 4.83353 11.3979C4.5328 11.4754 4.21568 11.5183 3.88761 11.5183C3.6558 11.5183 3.43161 11.4963 3.2118 11.4544C3.66889 12.8209 4.99429 13.8146 6.56463 13.8418C5.33657 14.7633 3.7881 15.3109 2.10624 15.3109C1.81646 15.3109 1.53103 15.2941 1.25 15.2638C2.83893 16.2407 4.7253 16.8103 6.75273 16.8103C13.3566 16.8103 16.9665 11.5728 16.9665 7.03053L16.9544 6.58552C17.6597 6.10382 18.2699 5.49862 18.75 4.80963Z" />
+                  </svg>
+
+                  <svg class="sign-in__in--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M18.329 18.3327L18.3332 18.332V12.2195C18.3332 9.22921 17.6894 6.92574 14.1936 6.92574C12.513 6.92574 11.3853 7.84796 10.9248 8.72227H10.8762V7.2049H7.56163V18.332H11.013V12.8223C11.013 11.3716 11.288 9.9688 13.0846 9.9688C14.8547 9.9688 14.8811 11.6244 14.8811 12.9153V18.3327H18.329Z" />
+                     <path d="M1.9415 7.2056H5.39706V18.3327H1.9415V7.2056Z" />
+                     <path
+                        d="M3.66789 1.66602C2.56303 1.66602 1.6665 2.56254 1.6665 3.6674C1.6665 4.77227 2.56303 5.68754 3.66789 5.68754C4.77275 5.68754 5.66928 4.77227 5.66928 3.6674C5.66859 2.56254 4.77206 1.66602 3.66789 1.66602Z" />
+                  </svg>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- форма регистрации нового пользователя -->
+      <div id="up" class="sign-up">
+         <div class="sign-up__body">
+            <div class="sign-up__content">
+               <a class="sign-up__close close-dialog" href="#"></a>
+               <div class="sign-up__title">Sign up</div>
+               <p class="sign-up__text">
+                  Registration takes less than a minute but gives you full control over your studying.
+               </p>
+               <form class="sign-up__register" action="#">
+
+                  <div class="sign-up__full">
+                     <label class="sign-up__label-full">Full name</label>
+                     <input class="sign-up__input-full" placeholder="Your full name" type="text">
+                  </div>
+                  <div class="sign-up__email">
+                     <label class="sign-up__label-email">Email</label>
+                     <input class="sign-up__input-email" placeholder="Your working email" type="email">
+                  </div>
+
+                  <div class="sign-up__pass">
+                     <label class="sign-up__label-pass">Password</label>
+                     <input class="sign-up__input-pass" type="password" placeholder="Your password" autocomplete="off">
+                     <img class="sign-up__eye-pass" src="img/sign_in/logo/eye.svg" alt="eye">
+                  </div>
+                  <div class="sign-up__confirm">
+                     <label class="sign-up__label-confirm">Confirm password</label>
+                     <input class="sign-up__input-confirm" type="password" placeholder="Confirm password"
+                        autocomplete="off">
+                     <img class="sign-up__eye-confirm" src="img/sign_in/logo/eye.svg" alt="eye">
+                  </div>
+
+                  <div class="sign-up__remember">
+                     <div class="sign-up__checkbox">
+                        <input id="remember" name="remember" type="checkbox" class="sign-up__check">
+                        <label for="remember" class="sign-up__label-check">
+                           Remember me
+                        </label>
+                     </div>
+                  </div>
+
+                  <button class="sign-up__button button">
+                     Sign up
+                  </button>
+               </form>
+
+               <div class="sign-up__account">
+                  <span class="sign-up__have">Already have an account?
+                     <a class="sign-up__link" href="#in">
+                        Sign in
+                     </a>
+                  </span>
+               </div>
+               <h3 class="sign-up__sotial-subtitle">
+                  Or sign in with
+               </h3>
+               <div class="sign-up__media-box">
+                  <svg class="sign-up__facebook--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M14.6359 0.837799L12.3215 0.833984C9.72134 0.833984 8.04102 2.60489 8.04102 5.34584V7.42611H5.71401C5.51293 7.42611 5.3501 7.59357 5.3501 7.80013V10.8142C5.3501 11.0208 5.51312 11.188 5.71401 11.188H8.04102V18.7935C8.04102 19 8.20386 19.1673 8.40494 19.1673H11.441C11.6421 19.1673 11.8049 18.9999 11.8049 18.7935V11.188H14.5258C14.7268 11.188 14.8897 11.0208 14.8897 10.8142L14.8908 7.80013C14.8908 7.70095 14.8524 7.60597 14.7842 7.53578C14.7161 7.46559 14.6232 7.42611 14.5267 7.42611H11.8049V5.66264C11.8049 4.81505 12.0016 4.38476 13.0764 4.38476L14.6355 4.38419C14.8364 4.38419 14.9992 4.21673 14.9992 4.01037V1.21163C14.9992 1.00545 14.8366 0.83818 14.6359 0.837799Z" />
+                  </svg>
+                  <svg class="sign-up__google--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M10.1761 8.7522H18.4056C18.4964 9.25921 18.5418 9.74352 18.5418 10.2051C18.5418 11.8472 18.1975 13.3134 17.5089 14.6037C16.8203 15.8939 15.8384 16.9023 14.5633 17.6287C13.2882 18.3552 11.8258 18.7184 10.1761 18.7184C8.98803 18.7184 7.85671 18.4895 6.78214 18.0317C5.70757 17.5739 4.78057 16.9552 4.00113 16.1758C3.22169 15.3963 2.60306 14.4693 2.14523 13.3948C1.68741 12.3202 1.4585 11.1889 1.4585 10.0008C1.4585 8.81273 1.68741 7.68141 2.14523 6.60685C2.60306 5.53228 3.22169 4.60528 4.00113 3.82584C4.78057 3.0464 5.70757 2.42777 6.78214 1.96994C7.85671 1.51212 8.98803 1.2832 10.1761 1.2832C12.4463 1.2832 14.3949 2.04372 16.0219 3.56476L13.6495 5.84633C12.7187 4.94581 11.5609 4.49555 10.1761 4.49555C9.19991 4.49555 8.2975 4.74149 7.46888 5.23337C6.64025 5.72525 5.98378 6.39307 5.49947 7.23683C5.01516 8.08059 4.773 9.00192 4.773 10.0008C4.773 10.9997 5.01516 11.921 5.49947 12.7648C5.98378 13.6086 6.64025 14.2764 7.46888 14.7683C8.2975 15.2601 9.19991 15.5061 10.1761 15.5061C10.8345 15.5061 11.4399 15.4153 11.9923 15.2336C12.5447 15.052 12.9987 14.825 13.3544 14.5526C13.7101 14.2802 14.0203 13.9699 14.2852 13.6218C14.55 13.2737 14.7449 12.9445 14.8698 12.6343C14.9946 12.324 15.0798 12.0289 15.1252 11.7489H10.1761V8.7522Z" />
+                  </svg>
+                  <svg class="sign-up__twitter--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M18.75 4.80963C18.1059 5.08291 17.4148 5.26824 16.6887 5.35098C17.4301 4.92586 17.9976 4.25154 18.2666 3.45051C17.5711 3.84421 16.8035 4.13008 15.9855 4.28505C15.3305 3.61597 14.3988 3.19922 13.3653 3.19922C11.3827 3.19922 9.77523 4.73844 9.77523 6.63576C9.77523 6.90485 9.80694 7.16767 9.86819 7.41899C6.88501 7.27552 4.23973 5.90699 2.46928 3.82745C2.1598 4.33426 1.98374 4.92479 1.98374 5.55516C1.98374 6.7478 2.618 7.80012 3.58033 8.41579C2.992 8.39695 2.43866 8.24198 1.95423 7.98439V8.02732C1.95423 9.69219 3.19213 11.0817 4.83353 11.3979C4.5328 11.4754 4.21568 11.5183 3.88761 11.5183C3.6558 11.5183 3.43161 11.4963 3.2118 11.4544C3.66889 12.8209 4.99429 13.8146 6.56463 13.8418C5.33657 14.7633 3.7881 15.3109 2.10624 15.3109C1.81646 15.3109 1.53103 15.2941 1.25 15.2638C2.83893 16.2407 4.7253 16.8103 6.75273 16.8103C13.3566 16.8103 16.9665 11.5728 16.9665 7.03053L16.9544 6.58552C17.6597 6.10382 18.2699 5.49862 18.75 4.80963Z" />
+                  </svg>
+                  <svg class="sign-up__in--logo" width="20" height="20" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M18.329 18.3327L18.3332 18.332V12.2195C18.3332 9.22921 17.6894 6.92574 14.1936 6.92574C12.513 6.92574 11.3853 7.84796 10.9248 8.72227H10.8762V7.2049H7.56163V18.332H11.013V12.8223C11.013 11.3716 11.288 9.9688 13.0846 9.9688C14.8547 9.9688 14.8811 11.6244 14.8811 12.9153V18.3327H18.329Z" />
+                     <path d="M1.9415 7.2056H5.39706V18.3327H1.9415V7.2056Z" />
+                     <path
+                        d="M3.66789 1.66602C2.56303 1.66602 1.6665 2.56254 1.6665 3.6674C1.6665 4.77227 2.56303 5.68754 3.66789 5.68754C4.77275 5.68754 5.66928 4.77227 5.66928 3.6674C5.66859 2.56254 4.77206 1.66602 3.66789 1.66602Z" />
+                  </svg>
+               </div>
+            </div>
+         </div>
+      </div>
    </div>
    <script src="js/menu.js"></script>
 </body>
